<resources>
    <string name="app_name">BancolombiaApp</string>
    <string name="volver">Volver</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Continuar">Continuar</string>
    <string name="icon_home">Inicio</string>
    <string name="icon_transactions">Transacciones</string>
    <string name="icon_explorer">Explorar</string>
    <string name="icon_request_products">Solicitar productos</string>
    <string name="icon_settings">Ajustes</string>
    <string name="home_greeting">Buenas tardes</string>
    <string name="Volver">Volver</string>
    <string name="Cuentas">CUENTAS</string>
    <string name="CuentaAhorros">Cuenta de Ahorro</string>
    <string name="Ahorros">Ahorros</string>
    <string name="SaldoDisponible">Saldo disponible</string>
    <string name="Cuenta">023-687602-66</string>
    <string name="Saldo">$ 26.969,91</string>
    <string name="DetallesProducto">Detalles del producto</string>
    <string name="Movimientos">Movimientos</string>
    <string name="TransferirDinero">Transferir dinero</string>
    <string name="DiaDia">Ir a Día a Día</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Transferir">TRANSFERIR DINERO</string>
    <string name="Valor">Valor</string>
    <string name="IngresaValor">Ingresa valor a transferir</string>
    <string name="monto">Monto de la transferencia</string>
    <string name="fecha">Fecha de la transaccion</string>
    <string name="tipoCuenta">Tipo de cuenta</string>
    <string name="enviarDinero">Enviar dinero</string>
    <string name="NoLocal">TRANSFERIR DINERO A PRODUCTOS NO INSCRITOS BANCOLOMBIA</string>
    <string name="Verificar">Verifica la transferencia</string>
    <string name="ProductoOrigen">Producto origen</string>
    <string name="ValorEnviar">Valor a enviar</string>
    <string name="Cambiar">Cambiar</string>
    <string name="MontoEnviar">$ 25.000,00</string>
    <string name="ProductoDestino">Producto destino</string>
    <string name="CuentaDestino">123-698544-58</string>
    <string name="TipoDestino">Ahorros / Bancolombia A la mano</string>
    <string name="Costo">Costo</string>
    <string name="ValorCosto">$ 0,00</string>
    <string name="CerrarSesion">Cerrar sesion</string>
    <string name="exito">¡Transferencia exitosa!</string>
    <string name="comprobante">Comprobante No. 2586358900</string>
    <string name="FechaTrans">29 Sep 2021 - 09:47 p.m</string>
    <string name="cuenta">Cuenta</string>
    <string name="ValorEnviado">Valor enviado</string>
    <string name="Nequi">Nequi</string>
    <string name="misProductos">Mis productos Bancolombia</string>
    <string name="productosI">Productos inscritos</string>
    <string name="DeBanco">De Bancolombia</string>
    <string name="otrosB">De otros bancos</string>
    <string name="noInscritos">Productos no inscritos</string>
    <string name="nequi">De nequi</string>
    <string name="productI">Inscribir un producto</string>
    <string name="tranferI">TRANSFERIR DINERO A PRODUCTOS NO INSCRITOS BANCOLOMBIA</string>
    <string name="numProduct">Ingrese el numero del producto</string>

</resources>