<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/iconHomeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIconHome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_iconos_home" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="@string/icon_home"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIconExplorer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_iconos_tarjetas" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="@string/icon_transactions"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_iconos_explorar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/icon_explorer"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/iconTramitesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_iconos_adminfacturas" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/icon_request_products"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_iconos_ajustes" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/icon_settings"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>