<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transaction_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/Fondo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMonto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/monto"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvTipoCuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tipoCuenta"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#9A9A9A"
                        android:orientation="vertical"></LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>