<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DestinationProductActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="7dp" />

    <Button
        android:id="@+id/volverProduct"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="167dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/outline_arrow_back_ios_black_20"
        android:gravity="left|center"
        android:onClick="onClick"
        android:text="@string/volver"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline43" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="63dp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="50dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintStart_toEndOf="@+id/volverProduct"
        app:layout_constraintTop_toTopOf="@+id/guideline43"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/outline_arrow_forward_ios_black_20"
        android:text="@string/Continuar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/guideline43"
        app:layout_constraintVertical_bias="0.166" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="103dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="399dp"
        android:layout_height="39dp"
        android:text="@string/tranferI"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline44"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="140dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/ProductoDestino"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline50"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="229dp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/numProduct"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline51"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/Ingrese"
        android:layout_width="360dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:backgroundTint="@color/Yellow"
        android:drawableStart="@drawable/numero"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47"
        app:layout_constraintVertical_bias="0.437"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>